Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Středa, 03. 11. 2021</h5>
+<h5>Čtvrtek, 04. 11. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Mrkvová s celerem</strong>
@@ -50,44 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Středa 3.11.2021</div>
+<div class="nadpis">Čtvrtek 4.11.2021</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Větrník s čokoládovým nebo ovocným krémem</div>
-<div class="cena">55 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Jáhlový puding se švestkami bez lepku a laktózy</div>
-<div class="cena">65 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Cuketová polévka s pečenou slaninou samostatně <em title="Mléko">7</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Cuketová polévka s pečenou slaninou s menu <em title="Mléko">7</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Hovězí karabáček na červeném víně, kořenová zelenina, žampiony, bramborová kaše <em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">149 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Kuřecí prso zapečené s rajčaty a mozzarellou, smetanová omáčka, kus kus, olivy <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Ragú z černé čočky, grilovaná zelenina, čerstvý sýr, baby špenát, slunečnicová semínka  <em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -98,10 +63,10 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninová s rozšlehanými vejci </td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou, nudlemi a játrovou rýží</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kulajda s hříbky</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Pečená masová sekaná, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight">Insta sleva</td><td class="menuName">Sleduješ náš profil "Senkyrna7" na instagramu, pak můžeš čerpat slevu: 150g  Smažené řízky z vepřové panenky, bramborový salát, citron (poprosíme o předložení sledování našeho profilu "Senkyrna7" na telefonu)</td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažené řízky z vepřové panenky, bramborový salát, citron</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Špikovaná hovězí kýta na divoko, dušená jasmínová rýže</td><td class="menuPrice">134,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřový guláš s cibulí a feferonkou, kynuté houskové knedlíky</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí </td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 200g Steak z vepřové pečeně na grilované zelenině s bazalkovým pestem, celerové hranolky, volské oko </td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborové noky se sýrovou omáčkou, filírovaná kuřecí prsa, rukola</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na jemné houbové omáčce, restované špecle</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny ochucený majonézovým dresinkem s hrubozrnou hořčicí, sušenými rajčaty a plátkovanou vepřovou panenkou</td><td class="menuPrice">135,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Rajčatová hovězí pečeně, kynuté houskové knedlíky</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Křenová omáčka s uzeným masem, kynuté houskové knedlíky</td><td class="menuPrice">132,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Nadívaný vepřový bok plněný vejci a špenátem, vařené brambory s máslem a šnitlíkem, kyselá okurka</td><td class="menuPrice">132,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí stroganov se žampióny a kyselou okurkou, smažené bramborové hranolky</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu s červenou cibulí a klobásou, pečené brambory s kmínem</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight">Low carb:</td><td class="menuName">Nízkosacharidová dieta: 150g Steak z kuřecích prsou na grilu, pečené žampióny s nivou, sázené vejce na šunce</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené palačinky plněné mletým masem a špenátem, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">132,-</td></tr><tr><td class="menuWeight">180g</td><td class="menuName">Špíz z kuřecích prsou a vepřové panenky s anglickou slaninou, paprikou, klobásou a cibulí, pepřová redukce, mačkané brambory s cibulkou</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů se zeleninou, sušenými rajčaty a olivami, plátkovaná vepřová panenka, vařené vejce</td><td class="menuPrice">134,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
@@ -157,7 +122,7 @@ a vanilkovým Crème fraîche	</td>
 </tr>
 <tr>
 <td>
-<table class="dm"><tr><td class="amount"> </td><td class="title">Boršč s červenou řepou a zakysanou smetanou 1a,7,9</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Vepřová panenka Wellington s anglickou slaninou a špenátovými listy balená v listovém těstě s mačkanými brambory, demi glace omáčkou a trhaným salátem 1a,3,7,9,10,12</td><td class="pricem">149 Kč</td><tr><tr><td class="amount">180g</td><td class="title">Telecí játra na roštu s hranolky a naší tatarskou omáčkou 1a,3,10</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Plněné cannelloni boloňským ragú zapečené bešamelem a sýrem se sýrovou bylinkovou omáčkou 1a,3,7,9</td><td class="pricem">135 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Pikantní hovězí PHO s koriandrem a chilli s vaječnými nudlemi 1a,3,6,9</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Krůtí kostky na paprice zjemněné smetanou s jasmínovou rýží 1a,3,7</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Hovězí nudličky chilli con carne s našimi bramboráčky 1a,3,7</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Studentský smažený řízek s bramborovou kaší a okurkovým salátem 1a,3,7</td><td class="pricem">125 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
