Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Čtvrtek, 04. 11. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Mrkvová s celerem</strong>
+<strong>Květáková</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Smažená vinná klobása se šťouchaným bramborem a okurkou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							129,-
-						</span>
-</p>
-<p>
-<strong>Špagety s pestem, kuřecím masem a parmazánem</strong>
+<strong>Pečené kuřecí stehno s dušenou karotkou a vařeným bramborem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
+						</span>
+</p>
+<p>
+<strong>Čočka s párkem, vejcem a okurkou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							125,-
 						</span>
 </p>
 <p>
@@ -52,7 +52,47 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Čtvrtek 4.11.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Perníkový cupcake s matcha krémem</div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Větrník s čokoládovým nebo ovocným krémem</div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Míša dort bez lepku </div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Batátový krém samostatně  <em title="Mléko">7</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Batátový krém s menu <em title="Mléko">7</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Pečený vepřový bok na zázvoru, ketjap omáčka, stir fry rýže, jarní cibulka <em title="Vejce">3</em><em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Řecký sekaný biftek, šťouchané brambory s pórkem, tzatziki <em title="Vejce">3</em><em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>150g Noky s omáčkou z červené řepy, cukrový hrášek, parmazán <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -130,7 +170,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s citronovym dresinkem {citronova stava, olivovy olej} a brokolici, cizrnovy hummus, salatek 139</li><li>Peceny filet z cerstve tresky s citronovym dresinkem a brokolici, cizrnovy hummus, salatek 169</li><li>Kow mo daeng – thajske grilovane veprove ve sladke cervene marinade se zelenymi bylinkami, jasminova ryze, salatek 139</li><li>Jehneci predek peceny na cesneku a cibuli, zeleninove birjany z basmati ryze, okurkove tzatziki, salatek 169</li><li>Thajske kari s tempehem, hnedymi zampiony, gaj coj, kokosovym mlekem a arasidy, jasminova ryze 139</li></ol>
+<ol><li>Smazeny filet z atlantickeho hejka v pivnim testicku, bramborovy salat s cervenou repou, petrzelkou a majonezou, citron {L} 139</li><li>Peceny filet z cerstveho morskeho vlka s francouzskym horcicnym maslem, bramborovy salat s cervenou repou, petrzelkou a majonezou 175</li><li>Malajsky hovezi rendang s vonavym korenim, zazvorem a kokosovym mlekem, jasminova ryze, salatek 139</li><li>Grilovane medailonky ze seleci kyty a hrbetu s karamelizovanymi jablky s celozrnnou horcici, gratinovane brambory, salatek 169</li><li>Cizrnovy hummus s balkanskym syrem a olivovym olejem, zeleninove birjany z basmati ryze, salatek 139</li></ol>
 </td>
 </tr>
 </table>
