Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -170,7 +170,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Smazeny filet z atlantickeho hejka v pivnim testicku, bramborovy salat s cervenou repou, petrzelkou a majonezou, citron {L} 139</li><li>Peceny filet z cerstveho morskeho vlka s francouzskym horcicnym maslem, bramborovy salat s cervenou repou, petrzelkou a majonezou 175</li><li>Malajsky hovezi rendang s vonavym korenim, zazvorem a kokosovym mlekem, jasminova ryze, salatek 139</li><li>Grilovane medailonky ze seleci kyty a hrbetu s karamelizovanymi jablky s celozrnnou horcici, gratinovane brambory, salatek 169</li><li>Cizrnovy hummus s balkanskym syrem a olivovym olejem, zeleninove birjany z basmati ryze, salatek 139</li></ol>
+<ol><li>Smazeny filet z atlantickeho hejka v pivnim testicku, bramborovy salat s cervenou repou, petrzelkou a majonezou, citron {L} 139</li><li>Peceny filet z cerstveho morskeho vlka s francouzskym horcicnym maslem, bramborovy salat s cervenou repou, petrzelkou a majonezou 175</li><li>Malajsky hovezi rendang s vonavym korenim, chilli, zazvorem a kokosovym mlekem, jasminova (pikantni), salatek 139</li><li>Grilovane medailonky ze seleci kyty a hrbetu s karamelizovanymi jablky s celozrnnou horcici, gratinovane brambory, salatek 169</li><li>Cizrnovy hummus s balkanskym syrem a olivovym olejem, zeleninove birjany z basmati ryze, salatek 139</li></ol>
 </td>
 </tr>
 </table>
