--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Čtvrtek, 04. 11. 2021</h5>
+<h5>Pátek, 05. 11. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Květáková</strong>
@@ -50,49 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Čtvrtek 4.11.2021</div>
+<div class="nadpis">Pátek 5.11.2021</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Perníkový cupcake s matcha krémem</div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Větrník s čokoládovým nebo ovocným krémem</div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Míša dort bez lepku </div>
-<div class="cena">65 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Batátový krém samostatně  <em title="Mléko">7</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Batátový krém s menu <em title="Mléko">7</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Pečený vepřový bok na zázvoru, ketjap omáčka, stir fry rýže, jarní cibulka <em title="Vejce">3</em><em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">149 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Řecký sekaný biftek, šťouchané brambory s pórkem, tzatziki <em title="Vejce">3</em><em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>150g Noky s omáčkou z červené řepy, cukrový hrášek, parmazán <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -103,13 +63,13 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou, nudlemi a játrovou rýží</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kulajda s hříbky</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Šumavská bramboračka s hříbky</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Rajčatová hovězí pečeně, kynuté houskové knedlíky</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Křenová omáčka s uzeným masem, kynuté houskové knedlíky</td><td class="menuPrice">132,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Nadívaný vepřový bok plněný vejci a špenátem, vařené brambory s máslem a šnitlíkem, kyselá okurka</td><td class="menuPrice">132,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí stroganov se žampióny a kyselou okurkou, smažené bramborové hranolky</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu s červenou cibulí a klobásou, pečené brambory s kmínem</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight">Low carb:</td><td class="menuName">Nízkosacharidová dieta: 150g Steak z kuřecích prsou na grilu, pečené žampióny s nivou, sázené vejce na šunce</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené palačinky plněné mletým masem a špenátem, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">132,-</td></tr><tr><td class="menuWeight">180g</td><td class="menuName">Špíz z kuřecích prsou a vepřové panenky s anglickou slaninou, paprikou, klobásou a cibulí, pepřová redukce, mačkané brambory s cibulkou</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů se zeleninou, sušenými rajčaty a olivami, plátkovaná vepřová panenka, vařené vejce</td><td class="menuPrice">134,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">150g Smažený řízek z kuřecích prsou, bramborový salát, citrón</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zbojnická hovězí pečeně, kynuté houskové knedlíky</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Buřty na černém pivu s cibulí a beraním rohem, rozpečený chléb na grilu</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Lasagne s bolonským ragú a bešamelem gratinovaný sýrem, sýrem, salát coleslav</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Dorůžova pečená vepřová panenka na listovém špenátu s plátky česneku a smetanou, grilovaná karotka, sázené vejce</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Medailonky z vepřové panenky v bramboráku 5ks , salát coleslav</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Pšeničná tortilla plněná kuřecími stripsy majonézovým dresinkem, anglickou slaninou, ledovým salátem, sýrem, zeleninou, smažené bramborové hranolky, americký dip</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové kotlety bez kosti, hermelínová omáčka s pórkem, restované špetzle</td><td class="menuPrice">136,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný hořčičným dresinkem, plátkovaná vepřová panenka, vařené vejce</td><td class="menuPrice">135,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Instagram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Nepečený piškotový řez s broskvemi a šlehačkou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
@@ -162,7 +122,7 @@ a vanilkovým Crème fraîche	</td>
 </tr>
 <tr>
 <td>
-<table class="dm"><tr><td class="amount"> </td><td class="title">Pikantní hovězí PHO s koriandrem a chilli s vaječnými nudlemi 1a,3,6,9</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Krůtí kostky na paprice zjemněné smetanou s jasmínovou rýží 1a,3,7</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Hovězí nudličky chilli con carne s našimi bramboráčky 1a,3,7</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Studentský smažený řízek s bramborovou kaší a okurkovým salátem 1a,3,7</td><td class="pricem">125 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Kulajda s houbami a vařenými vejci 1a,3,7</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Šunka od kosti se smetanovou křenovou omáčkou a našimi houskovými knedlíky 1a,3,7</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Kuřecí medailonky ve vinném těstíčku s vařenými brambory s pažitkou a aioli majonézou z pečeného česneku 1a,3,7,10,12</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">120g</td><td class="title">Mozzarella v parmské šunce na zeleninové salátu s extra panenským olivovým olejem, balsamikovou redukcí a bagetovými chipsy 1a,7,12</td><td class="pricem">129 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
