--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Pátek, 05. 11. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Květáková</strong>
+<strong>Vývar se zeleninou a uzeným masem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Pečené kuřecí stehno s dušenou karotkou a vařeným bramborem</strong>
+<strong>Vepřová plec na žampionech s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
 						</span>
 </p>
 <p>
-<strong>Čočka s párkem, vejcem a okurkou</strong>
+<strong>Meruňkové knedlíky s tvarohem, máslem a cukrem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							125,-
+							119,-
 						</span>
 </p>
 <p>
@@ -155,7 +155,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Smazeny filet z atlantickeho hejka v pivnim testicku, bramborovy salat s cervenou repou, petrzelkou a majonezou, citron {L} 139</li><li>Peceny filet z cerstveho morskeho vlka s francouzskym horcicnym maslem, bramborovy salat s cervenou repou, petrzelkou a majonezou 175</li><li>Malajsky hovezi rendang s vonavym korenim, chilli, zazvorem a kokosovym mlekem, jasminova (pikantni), salatek 139</li><li>Grilovane medailonky ze seleci kyty a hrbetu s karamelizovanymi jablky s celozrnnou horcici, gratinovane brambory, salatek 169</li><li>Cizrnovy hummus s balkanskym syrem a olivovym olejem, zeleninove birjany z basmati ryze, salatek 139</li></ol>
+<ol><li>Peceny pstruh s pecenym rajcetem a petrzelkovym pestem, kroupovy salat s pecenou zeleninou {L} 139</li><li>Peceny filet z cerstve prazmy kralovske s pecenym rajcetem a petrzelkovym pestem, kroupovy salat s pecenou zeleninou {L} 175</li><li>Ryzove nudle Pad thai s veprovym masem, restovanou zeleninou, arasidy, chilli a zelenymi bylinkami, citron 139</li><li>Grilovany jehneci kebab tanduri v jogurtove marinade se zazvorem a citrony, korenena ryze s beluga cockou, jogurtova rajta s matou, salatek 175</li><li>Smazene zampiony plnene modrym syrem, bramborovy salat s cervenou repou, petrzelkou a majonezou {L} 139</li></ol>
 </td>
 </tr>
 </table>
