Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -155,7 +155,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny pstruh s pecenym rajcetem a petrzelkovym pestem, kroupovy salat s pecenou zeleninou {L} 139</li><li>Peceny filet z cerstve prazmy kralovske s pecenym rajcetem a petrzelkovym pestem, kroupovy salat s pecenou zeleninou {L} 175</li><li>Ryzove nudle Pad thai s veprovym masem, restovanou zeleninou, arasidy, chilli a zelenymi bylinkami, citron 139</li><li>Grilovany jehneci kebab tanduri v jogurtove marinade se zazvorem a citrony, korenena ryze s beluga cockou, jogurtova rajta s matou, salatek 175</li><li>Smazene zampiony plnene modrym syrem, bramborovy salat s cervenou repou, petrzelkou a majonezou {L} 139</li></ol>
+<ol><li>Peceny pstruh s pecenym rajcetem a petrzelkovym pestem, kroupy s pecenou zeleninou {L} 139</li><li>Peceny filet z cerstve prazmy kralovske s pecenym rajcetem a petrzelkovym pestem, kroupy s pecenou zeleninou {L} 175</li><li>Ryzove nudle Pad thai s veprovym masem, restovanou zeleninou, arasidy, chilli a zelenymi bylinkami, citron 139</li><li>Grilovany jehneci kebab tanduri v jogurtove marinade se zazvorem a citrony, korenena ryze s beluga cockou, jogurtova rajta s matou, salatek 175</li><li>Smazene zampiony plnene modrym syrem, bramborovy salat s cervenou repou, petrzelkou a majonezou {L} 139</li></ol>
 </td>
 </tr>
 </table>
