--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Pátek, 05. 11. 2021</h5>
+<h5>Sobota, 06. 11. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Vývar se zeleninou a uzeným masem</strong>
@@ -50,34 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Pátek 5.11.2021</div>
+<div class="nadpis">Sobota 6.11.2021</div>
 <ul>
-<li class="polevka">
-<div class="polozka">300ml Gulášová polévka  samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Gulášová polévka  s menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Wrap plněný trhaným kuřecím masem a sýrem cheddar, pažitkový dip,  trhaný salát <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Vepřové maso na houbách, opečené brambory na másle a bylinkách <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Zeleninové sabdží s červenou čočkou, koriandr, dušená rýže <em title="Sójové boby (sója)">6</em><em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
 </td>
 </tr>
@@ -88,13 +63,16 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Šumavská bramboračka s hříbky</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">150g Smažený řízek z kuřecích prsou, bramborový salát, citrón</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zbojnická hovězí pečeně, kynuté houskové knedlíky</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Buřty na černém pivu s cibulí a beraním rohem, rozpečený chléb na grilu</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Lasagne s bolonským ragú a bešamelem gratinovaný sýrem, sýrem, salát coleslav</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Dorůžova pečená vepřová panenka na listovém špenátu s plátky česneku a smetanou, grilovaná karotka, sázené vejce</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Medailonky z vepřové panenky v bramboráku 5ks , salát coleslav</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Pšeničná tortilla plněná kuřecími stripsy majonézovým dresinkem, anglickou slaninou, ledovým salátem, sýrem, zeleninou, smažené bramborové hranolky, americký dip</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové kotlety bez kosti, hermelínová omáčka s pórkem, restované špetzle</td><td class="menuPrice">136,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný hořčičným dresinkem, plátkovaná vepřová panenka, vařené vejce</td><td class="menuPrice">135,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čočková s mrkví</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Instagram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažené rybí filé, bramborová kaše s máslem, citrón</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Plněné bramborové knedlíky uzeným masem, bílé dušené zelí, škvarky s cibulí</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Kuřecí játra na roštu s klobásou, naše bramborové krokety, mexický dip</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Steak z kuřecích prsou zapečený rajčaty a mozzarelou, brokolicové pyré, volské oko</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažená vepřová kotleta bez kosti obalená v čerstvě namleté strouhance, vařené brambory s máslem a šnitlíkem. citron</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linguine aglio olio peperonchino s kuřecím masem, strouhaný parmazán</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortilla plněná vepřovou panenkou, ledovým salátem, zeleninou a česnekovým dresingem, smažené hranolky, tatarka </td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Steak z kuřecích prsou na grilu, smetanová omáčka s hříbky a citronovým strouhem, špecle</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů se zeleninou, hořčičným dresinkem a medailonky z vepřové panenky, sušená rajčata</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">0,04L</td><td class="menuName">Novinka ročníkového zázraku z Úvalského minipivovaru Libertas: BOHEMIAN FRESH HOP LAGER 12% Alk. 4,7% - Ibu 45 (na čepu pouze v našich Šenkýrnách a Libertasu)</td><td class="menuPrice">52,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Nepečený piškotový řez s broskvemi a šlehačkou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
@@ -147,7 +125,7 @@ a vanilkovým Crème fraîche	</td>
 </tr>
 <tr>
 <td>
-<table class="dm"><tr><td class="amount"> </td><td class="title">Kulajda s houbami a vařenými vejci 1a,3,7</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Šunka od kosti se smetanovou křenovou omáčkou a našimi houskovými knedlíky 1a,3,7</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Kuřecí medailonky ve vinném těstíčku s vařenými brambory s pažitkou a aioli majonézou z pečeného česneku 1a,3,7,10,12</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">120g</td><td class="title">Mozzarella v parmské šunce na zeleninové salátu s extra panenským olivovým olejem, balsamikovou redukcí a bagetovými chipsy 1a,7,12</td><td class="pricem">129 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
+<table class="dm"></table>
 </td>
 </tr>
 </table>
