Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Pondělí, 08. 11. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Vývar se zeleninou a uzeným masem</strong>
+<strong>Gulášová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Vepřová plec na žampionech s rýží</strong>
+<strong>Vepřová plec v mrkvi s vařeným bramborem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							129,-
 						</span>
 </p>
 <p>
-<strong>Meruňkové knedlíky s tvarohem, máslem a cukrem</strong>
+<strong>Srbské rizoto se sýrem a okurkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							119,-
+							127,-
 						</span>
 </p>
 <p>
