Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -130,7 +130,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny pstruh s pecenym rajcetem a petrzelkovym pestem, kroupy s pecenou zeleninou {L} 139</li><li>Peceny filet z cerstve prazmy kralovske s pecenym rajcetem a petrzelkovym pestem, kroupy s pecenou zeleninou {L} 175</li><li>Ryzove nudle Pad thai s veprovym masem, restovanou zeleninou, arasidy, chilli a zelenymi bylinkami, citron 139</li><li>Grilovany jehneci kebab tanduri v jogurtove marinade se zazvorem a citrony, korenena ryze s beluga cockou, jogurtova rajta s matou, salatek 175</li><li>Smazene zampiony plnene modrym syrem, bramborovy salat s cervenou repou, petrzelkou a majonezou {L} 139</li></ol>
+<ol><li>Peceny filet z cerstveho jihoceskeho kapra {prorezavany – bez kosti} s thajskym chilli dzemem, smazena zeleninova ryze, salatek 139</li><li>Peceny filet z cerstve tresky tmave s thajskym chilli dzemem, smazena zeleninova ryze, salatek 169</li><li>Palive a vonave goanske vindalu s veprovym masem, bramborami a cerstvymi paprickami Naga Jolokia, jasminova ryze, salatek 139</li><li>Grilovane medailonky z hoveziho rostence s houbovou omackou, pecene brambory, salatek {L} 169</li><li>Zapecena cuketa plnena cervenou cockou s gaj coj a balkanskym syrem, pohanka se smazenou cibulkou, salatek 139</li></ol>
 </td>
 </tr>
 </table>
