Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Úterý, 09. 11. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Gulášová</strong>
+<strong>Bramborová s mrkví</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Vepřová plec v mrkvi s vařeným bramborem</strong>
+<strong>Hovězí stroganov s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
 						</span>
 </p>
 <p>
-<strong>Srbské rizoto se sýrem a okurkou</strong>
+<strong>Mahi mahi s červenou čočkou a bylinkovým olejem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							129,-
 						</span>
 </p>
 <p>
