Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -52,7 +52,42 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Úterý 9.11.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Pumpkin pie </div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Medovník</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Tomatová polévka samostatně  <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Tomatová polévka s menu <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>350g Caesar salát s kuřecím masem, vajíčko, slanina, krutony parmazán   <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Krůtí prso na paprice, bylinková tarhoňa <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>150g Květákové karbanátky, vařený brambor s bylinkovým máslem, pažitkový dip <em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -130,7 +165,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z cerstveho jihoceskeho kapra {prorezavany – bez kosti} s thajskym chilli dzemem, smazena zeleninova ryze, salatek 139</li><li>Peceny filet z cerstve tresky tmave s thajskym chilli dzemem, smazena zeleninova ryze, salatek 169</li><li>Palive a vonave goanske vindalu s veprovym masem, bramborami a cerstvymi paprickami Naga Jolokia, jasminova ryze, salatek 139</li><li>Grilovane medailonky z hoveziho rostence s houbovou omackou, pecene brambory, salatek {L} 169</li><li>Zapecena cuketa plnena cervenou cockou s gaj coj a balkanskym syrem, pohanka se smazenou cibulkou, salatek 139</li></ol>
+<ol><li>Thajske panang kari s kousky rybich filetu {hejk, amur, makrela}, arasidy, kokosovym mlekem, paprikami a cuketami, jasminova ryze 139</li><li>Paella s plody more {krevety, slavky, chobotnice, kalamary}, pecenou zeleninou a zelenymi bylinkami, salatek 175</li><li>Kruti medailonky po jihoindicku v citronove omacce se zazvorem, kokosovym mlekem a jogurtem, jasminova ryze, salatek 139</li><li>Spagety s nudlickami mladeho divocaka, paprickami jalapenos, kapustou a smazenou cibulkou, parmezan {L} 169</li><li>Imam bayildi – turecke zapecene lilky s restovanou cibulkou, rajcaty a zelenymi bylinkami, bulgur, smetanovy jogurt, salatek {L} 139 </li></ol>
 </td>
 </tr>
 </table>
