Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Úterý, 09. 11. 2021</h5>
+<h5>Středa, 10. 11. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Bramborová s mrkví</strong>
@@ -50,44 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Úterý 9.11.2021</div>
+<div class="nadpis">Středa 10.11.2021</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Pumpkin pie </div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Medovník</div>
-<div class="cena">65 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Tomatová polévka samostatně  <em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Tomatová polévka s menu <em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>350g Caesar salát s kuřecím masem, vajíčko, slanina, krutony parmazán   <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Krůtí prso na paprice, bylinková tarhoňa <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>150g Květákové karbanátky, vařený brambor s bylinkovým máslem, pažitkový dip <em title="Mléko">7</em><em title="Hořčice">10</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -98,13 +63,13 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pórková s vejci</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Gulášová</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">Katův šleh z vepřového masa a zeleniny, dušená jasmínová rýže</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Plněný paprikový lusk v rajské omáčce, kynuté houskové knedlíky</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight">Instasleva</td><td class="menuName">Pokud sleduješ náš profil "Senkyrna7" na instagramu, pak můžeš čerpat slevu: 150g  Medailonky z kuřecích prsou v bramboráku 5 ks, salát coleslaw (poprosíme o předložení sledování našeho profilu "Senkyrna7" na telefonu)</td><td class="menuPrice">87,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Medailonky z kuřecích prsou v bramboráku (5 ks), salát coleslaw</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí kýta na slanině s cibulí a vařeným vejcem, dušená jasmínová rýže</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Kuřecí játra na roštu, pečené brambory s kmínem, česnekový dip</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Dorůžova pečená vepřová panenka, ragú z cukety, lilku a žampionu zjemněné smetanou, hráškové pyré, volské oko</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené kuře ala bažant, mačkané brambory s cibulkou</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové kotlety bez kosti gratinovaný šunkou a sýrem, smažené bramborové hranolky</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené rybí file, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný mexickým dresinkem, plátkovaná vepřová panenka, vařené vejce</td><td class="menuPrice">135,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Segedínský guláš se smetanou, kynuté houskové knedlíky</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Koprová omáčka s hovězím masem a vařeným vejcem, kynuté houskové knedlíky</td><td class="menuPrice">134,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí štavnaté kousky po sečuánsku se sveet chilli omáčkou, dušená jasmínová rýže</td><td class="menuPrice">134,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Kuřecí játra na roštu, pečené brambory s kmínem, sázené vejce, česnekový dip</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 170g Kapsa z kuřecích prsou plněná šunkou, hermelínem a kapií, zelenina promíchaná olivovým olejem, celerové hranolky</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený květák, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">134,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linguine  ala Carbonara, filírované kuřecí prso, strouhaný parmazán</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na smetanové houbové omáčce, restované špecle</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Medailonky z vepřové panenky na grilu s jemnou omáčkou se zeleným pepřem, smažené bramborové hranolky</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstovinový salát se sýrem a šunkou, majonézovým dresinkem, ředkvičkami a tomaty, sypaný parmazánem</td><td class="menuPrice">131,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Instagram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Nepečený piškotový řez s broskvemi a šlehačkou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
@@ -157,7 +122,7 @@ a vanilkovým Crème fraîche	</td>
 </tr>
 <tr>
 <td>
-<table class="dm"><tr><td class="amount"> </td><td class="title">Hovězí vývar se zeleninou a játrovou zavářkou 1a,3,7,9</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">1/4</td><td class="title">Pečené kuřecí stehno na žampionech se šťávou z výpeku a bramborovou špenátovou roládou 1a,3,7</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Gratinovaný vepřový steak sýrovou cibulovou krustou se zelenými fazolkami na anglické slanině a steakovými hranolky 1a,7</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Variace grilovaných klobásek s čočkou na kyselo, sázeným vejcem, nakládanou okurkou a smaženou cibulkou 1a,3</td><td class="pricem">129 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Gulášová z hovězího krku s brambory 1a</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Konfitovaná vepřová krkovice Iberico s omáčkou z lišek a smetany s mačkanými brambory se smaženou cibulkou a sekanou petrželkou 1a,7</td><td class="pricem">145 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Kuřecí nudličky na červeném curry se zeleninou a kokosovým mlékem s jasmínovou rýží 6</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Tagliatelle s trhaným lososem, sušenými rajčaty, kapary a mladým špenátem 1a,3,4</td><td class="pricem">149 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
