Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -53,12 +53,12 @@
 <div class="nadpis">Středa 10.11.2021</div>
 <ul>
 <li class="polevka">
-<div class="polozka">300ml Čočková polévka s klobásou samostatně    <em title="Mléko">7</em></div>
+<div class="polozka">300ml Čočková polévka s klobásou samostatně  <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
 <div class="cena">39 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="polevka">
-<div class="polozka">300ml Čočková polévka s klobásou s menu   <em title="Mléko">7</em></div>
+<div class="polozka">300ml Čočková polévka s klobásou s menu  <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
 <div class="cena">29 Kč</div>
 <div class="clear"></div>
 </li>
@@ -155,7 +155,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Thajske panang kari s kousky rybich filetu {hejk, amur, makrela}, arasidy, kokosovym mlekem, paprikami a cuketami, jasminova ryze 139</li><li>Paella s plody more {krevety, slavky, chobotnice, kalamary}, pecenou zeleninou a zelenymi bylinkami, salatek 175</li><li>Kruti medailonky po jihoindicku v citronove omacce se zazvorem, kokosovym mlekem a jogurtem, jasminova ryze, salatek 139</li><li>Spagety s nudlickami mladeho divocaka, paprickami jalapenos, kapustou a smazenou cibulkou, parmezan {L} 169</li><li>Imam bayildi – turecke zapecene lilky s restovanou cibulkou, rajcaty a zelenymi bylinkami, bulgur, smetanovy jogurt, salatek {L} 139 </li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s jogurtovou krenovou omackou, pecene baby brambory, salatek 139</li><li>Peceny filet z cerstve prazmy s jogurtovou krenovou omackou, pecene baby brambory, salatek 175</li><li>Smazena ryze s doruzova pecenou veprovou peceni, brokolici a zeleninou, jablecne catny se zazvorem, salatek 139</li><li>Smazene rizecky z teleci a seleci kyty, stouchane brambory s kapustou  a cibulkou, salatek z cervene repy, citron {L} 169</li><li>Vegetarianske lasagne s pecenymi paprikami, rajcaty a cervenou cockou zapecene ve smetanove omacce, salatek {L} 139</li><li></li></ol>
 </td>
 </tr>
 </table>
